# ChangeLog for net-p2p/qbittorrent
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.211 2013/07/17 19:17:06 maekke Exp $

  17 Jul 2013; Markus Meier <maekke@gentoo.org> qbittorrent-3.0.9.ebuild:
  add ~arm, bug #473472

  31 Mar 2013; Jeff Horelick <jdhore@gentoo.org> qbittorrent-3.0.8.ebuild:
  marked x86 per bug 460190

*qbittorrent-3.0.9 (18 Mar 2013)

  18 Mar 2013; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-3.0.9.ebuild:
  Version bump

  05 Mar 2013; Agostino Sarubbo <ago@gentoo.org> qbittorrent-3.0.8.ebuild:
  Stable for amd64, wrt bug #460190

  03 Mar 2013; Markos Chandras <hwoarang@gentoo.org> -qbittorrent-2.9.11.ebuild,
  -qbittorrent-3.0.5.ebuild, -qbittorrent-3.0.6.ebuild:
  remove old

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> qbittorrent-2.9.11.ebuild,
  qbittorrent-2.9.7.ebuild, qbittorrent-3.0.5.ebuild, qbittorrent-3.0.6.ebuild,
  qbittorrent-3.0.8.ebuild, qbittorrent-9999.ebuild:
  Move Qt dependencies to the new category

*qbittorrent-3.0.8 (23 Jan 2013)

  23 Jan 2013; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-3.0.8.ebuild:
  Version bump

*qbittorrent-3.0.6 (09 Oct 2012)

  09 Oct 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-3.0.6.ebuild,
  -qbittorrent-3.0.4.ebuild:
  Version bump. remove old

*qbittorrent-3.0.5 (01 Oct 2012)

  01 Oct 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-3.0.5.ebuild,
  -qbittorrent-3.0.2.ebuild, -qbittorrent-3.0.3.ebuild:
  Version bump

*qbittorrent-3.0.4 (27 Sep 2012)

  27 Sep 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-3.0.4.ebuild:
  Version bump

  23 Sep 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add Ben de Groot <yngwin@gentoo.org> as maintainer

*qbittorrent-3.0.3 (18 Sep 2012)

  18 Sep 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-3.0.3.ebuild,
  -qbittorrent-3.0.1.ebuild:
  Version bump
